--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -25,6 +26,17 @@
     </license>
   </licenses>
 
+  <scm>
+    <connection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</connection>
+    <developerConnection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</developerConnection>
+    <url>git@github.com:lkwg82/versions-maven-plugin-report.git</url>
+  </scm>
+
+  <issueManagement>
+    <system>github</system>
+    <url>https://github.com/lkwg82/versions-maven-plugin-report/issues</url>
+  </issueManagement>
+
   <developers>
     <developer>
       <id>lkwg82</id>
@@ -33,6 +45,20 @@
       <timezone>Europe/Berlin</timezone>
     </developer>
   </developers>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model</artifactId>
+      <version>3.0.4</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.codehaus.plexus</groupId>
+          <artifactId>plexus</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+  </dependencies>
 
   <build>
     <pluginManagement>
@@ -45,5 +71,4 @@
       </plugins>
     </pluginManagement>
   </build>
-
 </project>
