--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -10,7 +9,7 @@
 
   <groupId>de.lgohlke.mojo</groupId>
   <artifactId>versions-maven-plugin-report</artifactId>
-  <version>2.1.4-SNAPSHOT</version>
+  <version>2.1.4</version>
   <packaging>jar</packaging>
 
   <name>Versions Maven Plugin Report API</name>
@@ -30,6 +29,7 @@
     <connection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</developerConnection>
     <url>git@github.com:lkwg82/versions-maven-plugin-report.git</url>
+    <tag>versions-maven-plugin-report-2.1.4</tag>
   </scm>
 
   <issueManagement>
