--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>de.lgohlke.mojo</groupId>
   <artifactId>versions-maven-plugin-report</artifactId>
-  <version>2.1.4</version>
+  <version>2.1.5-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Versions Maven Plugin Report API</name>
@@ -29,7 +29,7 @@
     <connection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</connection>
     <developerConnection>scm:git:git@github.com:lkwg82/versions-maven-plugin-report.git</developerConnection>
     <url>git@github.com:lkwg82/versions-maven-plugin-report.git</url>
-    <tag>versions-maven-plugin-report-2.1.4</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
